website/versioned_docs/version-0.1.0/0_01_START_TOKENIZE.md
---
id: version-0.1.0-tokenize
title: Tokenize your application
sidebar_label: Tokens
original_id: tokenize
---

We want to enable you to easily and safely create your own Branded Tokens on highly scalable OpenST Side Blockchains. These side blockchains are one of our key innovations. We use the OpenST technology protocol to allow our partners to create, or "mint", Branded Tokens on sidechains, by staking OST⍺ on the public Ropsten Ethereum blockchain. [<u>Learn more about the OpenST protocol</u>](https://github.com/OpenSTFoundation/openst-platform/blob/master/CHANGELOG.md).

OST KIT⍺ provides you tools to design, plan, mint, and manage a branded token economy backed by OST⍺.

It starts with setting up a conversion rate for your Branded Token. For example, you could set one $OST⍺ to be worth 10 Branded Tokens and then stake a total 10 $OST⍺, thereby creating the initial total pool of 100 Branded Tokens, for your token economy. You can then create as many transaction types as you like to address the core user actions in your application that you would like to reward or incentivize in your token economy. For example, "like", "share", "purchase", "download", "reward", "monthly winner", or "birthday event" are actions/events that can be setup as transactions.

Once you create these transactions in OST KIT⍺ and assign value to each of them, they become opportunities for your end-users to earn and spend your branded tokens. The transaction value represents how much it is worth each time one of your customers executes that transaction. This exchange of tokens represents a token economy; defining transactions thus works towards shaping your branded token economy and tokenizing your application.
