website/versioned_docs/version-1.0.0/0_01_START_TOKENIZE.md
---
id: version-1.0.0-tokenize
title: Tokenize your application
sidebar_label: Tokens
original_id: tokenize
---

We want to enable you to easily and safely create your own Branded Tokens on highly scalable OpenST Side Blockchains. These side blockchains are one of our key innovations. We use the OpenST technology protocol to allow our partners to create, or "mint", Branded Tokens on sidechains, by staking OST⍺ on the public Ropsten Ethereum blockchain. [<u>Learn more about the OpenST protocol</u>](https://github.com/OpenSTFoundation/openst-platform/blob/master/CHANGELOG.md).

OST KIT⍺ provides you tools to design, plan, mint, and manage a branded token economy backed by OST⍺.

It starts with setting up a conversion rate for your Branded Token. For example, you could set one $OST to be worth 10 Branded Tokens and then stake a total 10 $OST, thereby creating the initial total pool of 100 Branded Tokens, for your token economy. You can then create as many actions as you like to address the core user actions in your application that you would like to reward or incentivize in your token economy. For example, "like", "share", "purchase", "download", "reward", "monthly winner", or "birthday event" are actions/events that can be setup as actions in OST KIT⍺.

Once you create these actions in OST KIT⍺ and set amount for each of them, they become opportunities for your end-users to earn and spend your branded tokens. The amount of the action represents how much it is worth each time one of your customers perform that action. This exchange of tokens represents a token economy; defining actions thus works towards shaping your branded token economy and tokenizing your application.


>_last updated 17th May 2018_; for support see [help.ost.com](https://help.ost.com/support/home)
>
> OST KIT⍺ sandboxapi v1 | OpenST Platform v0.9.2
